src/App.css
html, body {
    margin:0; padding:0; height:100%; width:100%;
    overflow: hidden;
}

.error-div {
    position: fixed;
    margin: auto;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 20%;
    /* line-height: 40px; */
    text-align: center;
    background-color: #eee;
}

.cover-div {
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: transparent;
    z-index: 999;
}

.cover-div-error {
    display: none;
}

/* h for height */
.cover-div-error-h {
    display: none;
}

@media only screen and (max-width: 319px) {
    .cover-div-error {
        display: block;
    }
}

@media only screen and (max-height: 412px) {
    .cover-div-error-h {
        display: block;
    }
}

